fix(CSS): update division title color for improved visibility on timeline page

--- a/css.css
+++ b/css.css
@@ -1803,6 +1803,7 @@ body.timeline-page a:focus-visible {
 
 .division-bar .division-title {
     padding: 10px 0px 7px 0px;
+    color: var(--color_blue);
 }
 
 /* Age matrix tables */
